style.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

		/*Start CSS*/
		body {
	width: 80%;
	margin: 50px auto;
	font-family: sans-serif;
	font-size: 1.1em;
  background: white;
}

section {
	width: 80%;
  max-width:730px;
	margin: auto;
	background: #66e2dc;
	-webkit-box-shadow: 0 0 5px rgba(0,0,0, .3);
	-moz-box-shadow: 0 0 5px rgba(0,0,0, .3);
	box-shadow: 0 0 5px rgba(0,0,0, .3);
	padding: 2em;
}

section img {
	max-width:100%;
	margin: 0 auto;
	display: block;
}

footer {
	padding-bottom: 2em;
  text-align: center;
}

h1 {
	font-size: 3em;
}

p {

	-webkit-columns: 3;
	-moz-columns: 3;
	columns: 3;
	-webkit-column-gap: 1.2em;
	-moz-column-gap: 1.2em;
	column-gap: 1.2em;
	padding-bottom: 2.4em;
}

@media screen and (max-width: 1020px) {
	p {
		-webkit-columns: 2;
		-moz-columns: 2;
		columns: 2;
	}

  h1 {
	font-size: 2em;
}

  body {
	font-size: 1em;
}

@media screen and (max-width: 780px) {
	p {
		-webkit-columns: 1;
		-moz-columns: 1;
		columns: 1;
	}

  h1 {
	font-size: 1.6em;
}

body {
	font-size: 0.9em;
}

